--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -5,7 +5,7 @@
         </ul>
     </div>
     <div id="chat-input">
-        <form hx-on:htmx:ws-after-send="this.reset()" hx-ext="ws" ws-connect="/relay/chatroom2">
+        <form hx-on:htmx:ws-after-send="this.reset()" hx-ext="ws" ws-connect="/relay/chatroom">
             <input type="hidden" name="sender" value="{{.Sender}}">
             <fieldset role="group">
                 <textarea name="message" placeholder="Write your message here..."
